@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when a favorites entry was removed from the game (#107)
 ---------------------------------------------------------------------------------------------------
 Version: 3.3.1
 Date: 2022-03-12
